k8s/api-cluster-ip-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: api-cluster-ip-service
spec:
  selector:
    component: api
  type: ClusterIP
  ports:
  - port: 9000
    targetPort: 9000
