k8s/api-nginx-cluster-ip-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: api-nginx-cluster-ip-service
spec:
  selector:
    component: api-nginx
  type: ClusterIP
  ports:
  - port: 8000
    targetPort: 8000
