k8s/mariadb-cluster-ip-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: mariadb-cluster-ip-service
spec:
  selector:
    component: mariadb
  type: ClusterIP
  ports:
    - port: 3306
      targetPort: 3306
