k8s/ingress-service.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-service
  annotations:
    kubernetes.io/ingress.class: 'nginx'
    nginx.ingress.kubernetes.io/use-regex: 'true'
spec:
  rules:
    - http:
        paths:
          - path: /?(.*)
            pathType: Prefix
            backend:
              service:
                name: app-cluster-ip-service
                port:
                  number: 4200
          - path: /api/?(.*)
            pathType: Prefix
            backend:
              service:
                name: api-nginx-cluster-ip-service
                port:
                  number: 8000
